examples/avm-res-containerservice-managedcluster/0.8.4/submodules/maintenanceconfiguration/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# Maintenance Configuration Submodule

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.11, < 2.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.12)

## Resources

The following resources are used by this module:

- [azapi_resource.this](https://registry.terraform.io/providers/azure/azapi/latest/docs/resources/resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_name"></a> [name](#input\_name)

Description: The name of the resource.

Type: `string`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The parent resource ID for this resource.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_ignore_body_changes"></a> [ignore\_body\_changes](#input\_ignore\_body\_changes)

Description: Body-relative paths to ignore for each AzAPI resource, in dot notation. Changes take  
effect only after apply, and ignored configuration is not sent to Azure until the  
path is removed.

- `containerservice_managed_clusters_maintenance_configurations` - Paths ignored on the maintenance configuration.

Type:

```hcl
object({
    containerservice_managed_clusters_maintenance_configurations = optional(list(string), [])
  })
```

Default: `{}`

### <a name="input_maintenance_window"></a> [maintenance\_window](#input\_maintenance\_window)

Description: Maintenance window used to configure scheduled auto-upgrade for a Managed Cluster.

- `duration_hours` - Length of maintenance window range from 4 to 24 hours.
- `not_allowed_dates` - Date ranges on which upgrade is not allowed. 'utcOffset' applies to this field. For example, with 'utcOffset: +02:00' and 'dateSpan' being '2022-12-23' to '2023-01-03', maintenance will be blocked from '2022-12-22 22:00' to '2023-01-03 22:00' in UTC time.
- `schedule` - One and only one of the schedule types should be specified. Choose either 'daily', 'weekly', 'absoluteMonthly' or 'relativeMonthly' for your maintenance schedule.
  - `absolute_monthly` - For schedules like: 'recur every month on the 15th' or 'recur every 3 months on the 20th'.
    - `day_of_month` - The date of the month.
    - `interval_months` - Specifies the number of months between each set of occurrences.
  - `daily` - For schedules like: 'recur every day' or 'recur every 3 days'.
    - `interval_days` - Specifies the number of days between each set of occurrences.
  - `relative_monthly` - For schedules like: 'recur every month on the first Monday' or 'recur every 3 months on last Friday'.
    - `day_of_week` - The weekday enum.
    - `interval_months` - Specifies the number of months between each set of occurrences.
    - `week_index` - The week index. Specifies on which week of the month the dayOfWeek applies.
  - `weekly` - For schedules like: 'recur every Monday' or 'recur every 3 weeks on Wednesday'.
    - `day_of_week` - The weekday enum.
    - `interval_weeks` - Specifies the number of weeks between each set of occurrences.
- `start_date` - The date the maintenance window activates. If the current date is before this date, the maintenance window is inactive and will not be used for upgrades. If not specified, the maintenance window will be active right away.
- `start_time` - The start time of the maintenance window. Accepted values are from '00:00' to '23:59'. 'utcOffset' applies to this field. For example: '02:00' with 'utcOffset: +02:00' means UTC time '00:00'.
- `utc_offset` - The UTC offset in format +/-HH:mm. For example, '+05:30' for IST and '-07:00' for PST. If not specified, the default is '+00:00'.

Type:

```hcl
object({
    duration_hours = number
    not_allowed_dates = optional(list(object({
      end   = string
      start = string
    })))
    schedule = object({
      absolute_monthly = optional(object({
        day_of_month    = number
        interval_months = number
      }))
      daily = optional(object({
        interval_days = number
      }))
      relative_monthly = optional(object({
        day_of_week     = string
        interval_months = number
        week_index      = string
      }))
      weekly = optional(object({
        day_of_week    = string
        interval_weeks = number
      }))
    })
    start_date = optional(string)
    start_time = string
    utc_offset = optional(string)
  })
```

Default: `null`

### <a name="input_not_allowed_time"></a> [not\_allowed\_time](#input\_not\_allowed\_time)

Description: Time slots on which upgrade is not allowed.

Type:

```hcl
list(object({
    end   = optional(string)
    start = optional(string)
  }))
```

Default: `null`

### <a name="input_resource_types"></a> [resource\_types](#input\_resource\_types)

Description: AzAPI resource types and API versions used by this module.

- `containerservice_managed_clusters_maintenance_configurations` - Resource type and API version for the maintenance configuration.

Type:

```hcl
object({
    containerservice_managed_clusters_maintenance_configurations = optional(string, "Microsoft.ContainerService/managedClusters/maintenanceConfigurations@2026-03-01")
  })
```

Default: `{}`

### <a name="input_retry"></a> [retry](#input\_retry)

Description: Retry configuration applied to the AzAPI resources in this module.

- `error_message_regex` - Regular expressions matching error messages that should be retried.
- `interval_seconds` - Initial delay between retries, in seconds.
- `max_interval_seconds` - Maximum delay between retries, in seconds.

Type:

```hcl
object({
    error_message_regex  = optional(list(string))
    interval_seconds     = optional(number)
    max_interval_seconds = optional(number)
  })
```

Default: `null`

### <a name="input_time_in_week"></a> [time\_in\_week](#input\_time\_in\_week)

Description: Time slots during the week when planned maintenance is allowed to proceed. If two array entries specify the same day of the week, the applied configuration is the union of times in both entries.

Type:

```hcl
list(object({
    day        = optional(string)
    hour_slots = optional(list(number))
  }))
```

Default: `null`

### <a name="input_timeouts"></a> [timeouts](#input\_timeouts)

Description: Timeouts applied to the AzAPI resources in this module.

- `create` - Timeout for create operations.
- `read` - Timeout for read operations.
- `update` - Timeout for update operations.
- `delete` - Timeout for delete operations.

Type:

```hcl
object({
    create = optional(string)
    read   = optional(string)
    update = optional(string)
    delete = optional(string)
  })
```

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the created resource.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The ID of the created resource.

### <a name="output_system_data"></a> [system\_data](#output\_system\_data)

Description: Metadata pertaining to creation and last modification of the resource.

### <a name="output_type"></a> [type](#output\_type)

Description: Resource type

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
